# eo-py-coding-challenge

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/workflows/: ci.yml
public_api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  scripts.py
public_api/src/public_api/: app_logging.py  config.py  constants.py  db.py  main.py  models.py  queue.py  schemas.py  scripts.py  tasks.py  ws.py
public_api/src/public_api/routers/: ip.py
public_api/tests/: conftest.py  test_ip.py  test_models.py  test_tasks.py  test_ws.py
user_interface/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
user_interface/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
user_interface/src/components/: IPCheckList.css  IPCheckList.test.tsx  IPCheckList.tsx  IpInputField.css  IpInputField.test.tsx  IpInputField.tsx  Popup.css  Popup.test.tsx  Popup.tsx
user_interface/src/constants/: api.ts
user_interface/src/utils/: apiUtils.test.ts  apiUtils.ts  ipUtils.ts
